--- a/inventories/aws/group_vars/all/all.yml
+++ b/inventories/aws/group_vars/all/all.yml
@@ -1,8 +1,9 @@
-domaine: k8-dev.wildwidewest.xyz
+domaine: melkouhen.net
 
 registry: registry.{{domaine}}
 
-acme: https://acme-staging-v02.api.letsencrypt.org/directory
+#acme: https://acme-staging-v02.api.letsencrypt.org/directory
+acme: https://acme-v02.api.letsencrypt.org/directory
 
 kubeadm:
   init:
