--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -21,31 +21,37 @@
   become_user: root
 
 - name: Install container-selinux
+  command: amazon-linux-extras install docker
+  become: yes
+  become_user: root
+  when: deploy_target is defined and deploy_target = 'aws'
+
+- name: Install container-selinux
   yum:
-    name: http://vault.centos.org/centos/7.3.1611/extras/x86_64/Packages/container-selinux-2.9-4.el7.noarch.rpm
+    name: http://mirror.centos.org/centos/7/extras/x86_64/Packages/container-selinux-2.74-1.el7.noarch.rpm
     state: present
     update_cache: True
     validate_certs: false
-#    lock_timeout: 180
+    lock_timeout: 180
   become: yes
   become_user: root
   ignore_errors: True
-  when: "'tag_Name_Master' in groups"
-
+  when: deploy_target is not defined
+  
 - name: "Ensure a list of packages installed"
   yum:
     name: "{{ packages }}"
     state: present
     update_cache: True
     validate_certs: false
-#    lock_timeout: 180
+    lock_timeout: 180
   vars:
     packages:
       - docker-ce
-      - device-mapper-persistent-data
       - lvm2
   become: yes
   become_user: root
+  when: deploy_target is not defined
 
 - name: "Create Groupe Docker"
   group:
@@ -74,7 +80,7 @@
   yum:
     name: logrotate
     state: present
-#    lock_timeout: 180
+    lock_timeout: 180
 
 - name: "Copy logrotate conf file"
   template:
