--- a/roles/k8s-cert-manager/templates/issuer.yaml
+++ b/roles/k8s-cert-manager/templates/issuer.yaml
@@ -12,14 +12,14 @@ spec:
     privateKeySecretRef:
       name: letsencrypt-issuer
     # Enable the HTTP-01 challenge provider
-    #http01: {}
+    http01: {}
 
     dns01:
       providers:
         - name: dns
           route53:
             region: us-east-1
-            accessKeyID: AKIAZFKTAHHP2YGYM5WR
+            accessKeyID: {{aws_key}}
             secretAccessKeySecretRef:
               name: acme-route53
               key: secret-access-key
