--- a/roles/k8s/tasks/main.yml
+++ b/roles/k8s/tasks/main.yml
@@ -10,6 +10,7 @@
     state: disabled
   become: yes
   become_user: root
+  when: False
 
 - name: Ensure a list of packages are installed
   yum:
@@ -18,7 +19,7 @@
     update_cache: True
     validate_certs: False
     disable_gpg_check: True
-#    lock_timeout: 180
+    lock_timeout: 180
   vars:
     packages:
     - kubelet
@@ -38,5 +39,10 @@
 # LINT-ERROR
 - name: Execute kubeadm reset
   command: kubeadm reset -f
+  become: yes
+  become_user: root
+
+- name: Execute kubeadm reset
+  command: swapoff -a
   become: yes
   become_user: root
