--- a/roles/tool-helm/tasks/main.yml
+++ b/roles/tool-helm/tasks/main.yml
@@ -38,6 +38,13 @@
   become: yes
   become_user: root
 
+- name: "Make helmfile executable"
+  file:
+    path: /usr/local/bin/helmfile
+    mode: 0755
+  become: yes
+  become_user: root
+
 - name: "Create cluster role binding for cluster-admin namespace default"
   k8s_raw:
     state: present
