--- a/roles/k8s-external-dns/tasks/main.yml
+++ b/roles/k8s-external-dns/tasks/main.yml
@@ -1,1 +1,2 @@
-helm install stable/external-dns --set aws.credentials.accessKey=AKIAZFKTAHHPRSZQAUFB --set aws.credentials.secretKey=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 --set provider=aws --set aws.zoneType=public --set txtOwnerId=Z26RPPVUP5NQWM --set domainFilters[0]=melkouhen.net
+helm install stable/external-dns --set aws.credentials.accessKey=acces_key
+  --set aws.credentials.secretKey=secret_key --set provider=aws --set aws.zoneType=public --set txtOwnerId=Z26RPPVUP5NQWM --set domainFilters[0]=melkouhen.net
