--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -34,5 +34,5 @@
     - { role: app-secrets,            tags: [install, kubernetes-master, app-secrets] }
     - { role: k8s-cert-manager,       tags: [conf,    k8s-cert-manager] }
     - { role: k8s-ingress-nginx,      tags: [conf,    k8s-ingress-nginx] }
+    - { role: k8s-external-dns,       tags: [conf,    k8s-external-dns] }
     - { role: k8s-nfs-provisioner,    tags: [conf,    k8s-nfs-provisioner], when: nfs_server is defined }
-    - { role: k8s-dashboard,          tags: [conf,    dashboard] }
