--- a/roles/k8s-ingress-nginx/tasks/main.yml
+++ b/roles/k8s-ingress-nginx/tasks/main.yml
@@ -1,8 +1,3 @@
-- name: "Copy Resources"
-  template:
-    src: "templates/patch.yml"
-    dest: "/tmp/patch.yml"
-
 - name: "Helm List"
   command: /usr/local/bin/helm list
   become: yes
@@ -11,11 +6,16 @@
   changed_when: False
 
 - name: "Install the nginx-ingress Helm chart"
-  command: /usr/local/bin/helm install --name nginx-ingress --version 0.24.0 --set controller.publishService.enabled=true stable/nginx-ingress
+  command: /usr/local/bin/helm install --name nginx-ingress --set controller.publishService.enabled=true stable/nginx-ingress
   become: yes
   become_user: root
   when: "'nginx-ingress' not in helm_list.stdout"
 
+- name: "Copy Resources"
+  template:
+    src: "templates/patch.yml"
+    dest: "/tmp/patch.yml"
+    
 # LINT-ERROR
 - name: Patch ConfigMap
   shell: kubectl patch configmap nginx-ingress-controller --patch "$(cat /tmp/patch.yml)"
